--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -28,6 +28,7 @@ p{
     justify-content: space-between;
     align-items: center;
     padding: 16px;
+    flex-wrap: wrap;
 }
 
 #logo{
@@ -45,6 +46,7 @@ ul{
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    flex-wrap: wrap;
 }
 
 .sign-up{
@@ -55,7 +57,58 @@ ul{
     color: white;
     font-size: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 
+.content{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 50px;
+}
+
+.hero{
+    position: relative;
+    display: flex;
+}
+
+.container{
+    position: absolute;
+    padding-left: 40px;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+    justify-content: center;
+    top: 50%;
+    bottom: 50%;
+    
+}
+
+.container .title{
+    font-size: 30px;
+    font-weight: 700;
+    background-image: linear-gradient(60deg, #362b93 0%, #1772c2 37%, #1b9ec2 65%, #2de68c 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+}
+
+.container #start{
+    max-width: 100px;
+    padding: 10px 15px;
+    border-radius: 15px;
+    font-size: 12px;
+    border: none;
+    color: white;
+    background: linear-gradient(-225deg, #f73794 0%, #7C64D5 48%, #4CC3FF 100%);
+
+}
+
+.container p{
+    background:linear-gradient(to bottom right,#b21c71,#5a1498,#3c82b4) ;
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    font-size: 23px;
 }
 
 
