--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -111,6 +111,48 @@ ul{
     font-size: 23px;
 }
 
+.courses{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.courses .cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    gap: 40px;
+}
+
+.card{
+    min-width: 250px;
+    height: 250px;
+    box-shadow: 2px 4px 16px rgba(8, 5, 5, 0.06);
+    border: 1px rgb(94, 89, 89);
+    border-radius: 15px;
+    background-color: rgba(206, 191, 191, 0.1);
+}
+
+.card img{
+    width: 250px;
+    height: 150px;
+    border-radius: 15px 15px 0px 0px;
+}
+
+.card p{
+    padding: 8px;
+    font-size: 15px;
+}
+
+.heading{
+    font-size: 40px;
+    font-weight: 700;
+}
+
 
 
 
