--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -214,6 +214,12 @@ ul{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+.footer{
+    text-align: center;
+    margin-top: 30px;
+    padding: 20px;
+    background-color: rgba(32, 30, 30, 0.5);
+}
 
 
 
